--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-targe="#navbar">
+<body data-bs-spy="scroll" data-bs-targe="#navbar" class="container-fluid44">
     <!-- start codes -->
 
     <!-- NAVBAR Start Codes -->
@@ -93,7 +93,27 @@
     <!-- HEADER Start Codes -->
 
     <!-- MAIN Start Codes -->
-    <main id="main"></main>
+    <main id="main">
+        <i class="fa fa-address-card" aria-hidden="true"></i>
+        <h2 class="text-center tag_header">deneme deneme deneme</h2>
+        <img src="img/header1.jpg" alt="" srcset="">
+        <p class="line-clamp4">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nostrum autem sapiente. Corporis facilis deleniti, voluptatum dolorem quam, labore alias, nemo optio assumenda id maiores mollitia laudantium ducimus magni molestias!
+Modi iusto commodi eum doloremque corporis sapiente praesentium voluptatibus esse molestiae nostrum nulla fugit, adipisci ex a consequuntur itaque! Doloribus, voluptatibus! Numquam illum autem ex quasi non laboriosam? Deleniti, commodi.
+A cumque sunt repellat! Quia temporibus eos sit veritatis, aspernatur nemo earum placeat provident ipsa? Fugiat nulla recusandae quam ab commodi rem eligendi qui et, officia eveniet vel in labore.
+Nemo rem fuga natus. Voluptates corrupti iste quis culpa, error, eveniet consectetur, quos cupiditate ab porro voluptatem soluta nobis. Facilis odio quae voluptas obcaecati illum eaque numquam adipisci, nesciunt qui.
+Vitae veritatis, quod debitis necessitatibus quasi nesciunt dolorum in natus animi maxime reiciendis quisquam quibusdam suscipit inventore rem ullam. Perspiciatis sint ipsam tempora eos voluptatibus blanditiis laborum iusto necessitatibus animi!
+Mollitia dolores odio recusandae. Optio tempore, numquam perferendis laudantium explicabo facilis incidunt voluptas, repellendus cumque alias dolorem exercitationem ab repudiandae, beatae dignissimos commodi ut fuga. Voluptates id modi assumenda ullam.
+Nesciunt, voluptate? Aliquid at unde laborum dolores laboriosam ex doloribus inventore hic, nemo amet labore ut in nesciunt quidem aliquam cum aut possimus nisi soluta dolor illum eligendi. Quae, quis.
+Saepe reprehenderit labore commodi sint, quos ex tenetur inventore, illum alias odio illo pariatur neque quaerat? Quia commodi beatae nobis? Magnam sapiente explicabo possimus doloremque? Dolor deserunt voluptatem mollitia ut.
+Cupiditate praesentium, aut illo rerum error dicta ex tenetur doloribus itaque animi? Corporis fugit animi numquam maiores veritatis, eos nostrum veniam error sequi, consequuntur ullam, repellendus dolor culpa et cupiditate.
+Natus quibusdam facilis neque sed reiciendis eum impedit numquam accusantium fugiat ullam nemo mollitia doloribus repudiandae, enim quidem tempora aliquid pariatur est quas vero, laudantium repellat, aliquam ratione! Quod, distinctio.
+Suscipit, beatae ipsa? At ullam cumque dolore! Ipsum pariatur, reprehenderit dolor, necessitatibus veniam laudantium similique maxime nam amet possimus maiores suscipit deleniti! Mollitia ipsa possimus corporis omnis quasi, nobis vel?
+Tempore esse asperiores, numquam consequatur corporis optio doloremque repellat, harum voluptatibus ad enim labore maxime laborum dolores molestias quisquam dolorem error, minus quia? Praesentium atque, assumenda distinctio sit consequatur veniam!
+Aut consequatur exercitationem eius porro commodi aliquam magni nam, eaque, nobis cupiditate natus aspernatur expedita unde. Quisquam ipsa consequuntur rem saepe quibusdam eveniet, neque similique. Autem omnis totam rerum magni?
+Facere mollitia eum, cum, recusandae et dignissimos iure sequi odit minus, porro eos ab reiciendis! Suscipit quasi saepe beatae reiciendis ratione ab, similique aliquam natus dolore ut corrupti delectus molestias!
+</p>
+    </main>
     <!-- MAIN Start Codes -->
 
     <!-- FOOTER Start Codes -->
