--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-targe="#navbar_second" class="container-fluid44">
+<body data-bs-spy="scroll" data-bs-targe="#navbar_second">
 
     <noscript>This that browser not working JS</noscript>
     <!-- start codes -->
 
     <!-- NAVBAR FIRST Start Codes -->
-    <nav id="navbar_first" class="navbar navbar-expand-md navbar-dark">
-
+    <nav id="navbar_first" class="navbar">
         <!-- LEFT -->
         <ul class="navbar_first_left">
             <li>
@@ -76,15 +75,14 @@
         <!-- RIGHT -->
         <ul class="navbar_first_right">
             <li>
-                <i class="fa-solid fa-phone-volume"></i>
+                <i class="fa-solid fa-right-to-bracket"></i>
             </li>
             <li>
-                <i class="fa-regular fa-envelope"></i>
+                <i class="fa-regular fa-id-card"></i>
             </li>
         </ul>
     </nav>
     <!-- NAVBAR End Codes -->
-
 
     <!-- NAVBAR SECOND Start Codes -->
     <nav id="navbar_second" class="navbar navbar-expand-md navbar-dark bg-dark">
