--- a/index.html
+++ b/index.html
@@ -55,39 +55,88 @@
     <!-- start codes -->
 
     <!-- NAVBAR FIRST Start Codes -->
-    <nav id="navbar_first" class="navbar">
-        <!-- LEFT -->
-        <ul class="navbar_first_left">
-            <li>
-                <i class="fa-solid fa-phone-volume"></i>
-                <a href="tel:+90 111 22 33">+90 111 22 33</a>
-            </li>
-            <li>
-                <i class="fa-regular fa-envelope"></i>
-                <a href="mailto:deneme@gmail.com">deneme@gmail.com</a>
-            </li>
-            <li>
-                <i class="fa-solid fa-location-dot"></i>
-                Turkey
-            </li>
-        </ul>
 
-        <!-- RIGHT -->
-        <ul class="navbar_first_right">
-            <li>
-                <i class="fa-solid fa-right-to-bracket"></i>
-            </li>
-            <li>
-                <i class="fa-regular fa-id-card"></i>
-            </li>
-        </ul>
+    <nav id="navbar_first" class="navbar">
+        <div class="container">
+            <!-- LEFT -->
+            <ul class="navbar_first_left">
+                <li>
+                    <i class="fa-solid fa-phone-volume"></i>
+                    <a href="tel:+90 111 22 33">+90 111 22 33</a>
+                </li>
+                <li>
+                    <i class="fa-regular fa-envelope"></i>
+                    <a href="mailto:deneme@gmail.com">deneme@gmail.com</a>
+                </li>
+                <li>
+                    <i class="fa-solid fa-location-dot"></i>
+                    Turkey
+                </li>
+            </ul>
+
+            <!-- RIGHT -->
+            <ul class="navbar_first_right">
+                <li>
+                    <i class="fa-solid fa-right-to-bracket" data-bs-toggle="offcanvas" data-bs-target="#login"
+                        aria-controls="login"></i>
+                </li>
+                <li>
+                    <i class="fa-regular fa-id-card" data-bs-toggle="offcanvas" data-bs-target="#register"
+                        aria-controls="register"></i>
+                </li>
+            </ul>
+        </div>
     </nav>
+
+
+
+    <!-- LOGIN -->
+    <div class="offcanvas offcanvas-start bg-dark text-white" data-bs-scroll="true" tabindex="-1" id="login"
+        aria-labelledby="Enable both scrolling & backdrop">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title mt-5" id="Enable both scrolling & backdrop">Login</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body ">
+            <form action="#!" method="post">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="password_id" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password_id" name="password_id"
+                        placeholder="şifrenizi giriniz">
+                </div>
+
+                <div class="mb-3">
+                    <input type="reset" class="btn btn-danger" value="Temizle" />
+                    <button type="submit" class="btn btn-primary">Gönder</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- REGISTER -->
+    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="register"
+        aria-labelledby="Enable both scrolling & backdrop">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="Enable both scrolling & backdrop">Register</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <p>Register</p>
+        </div>
+    </div>
     <!-- NAVBAR End Codes -->
 
     <!-- NAVBAR SECOND Start Codes -->
     <nav id="navbar_second" class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="index.html">
+                <i class="fa-solid fa-square-rss"></i>
+            </a>
             <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -96,24 +145,27 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page">Home <span
+                        <a class="nav-link active" href="#" aria-current="page">Anasayfa <span
                                 class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Hakkımızda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">iletişim</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                            aria-haspopup="true" aria-expanded="false">Dersler</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Action 1</a>
-                            <a class="dropdown-item" href="#">Action 2</a>
+                            <a class="dropdown-item" href="#">Frontend</a>
+                            <a class="dropdown-item" href="#">Backend</a>
                         </div>
                     </li>
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control me-sm-2" type="text" placeholder="Arama için ...">
+                    <button class="btn btn-outline-warning my-2 my-sm-0 ms-2" type="submit">Arama</button>
                 </form>
             </div>
         </div>
@@ -126,50 +178,7 @@
 
     <!-- MAIN Start Codes -->
     <main id="main">
-        <i class="fa fa-address-card" aria-hidden="true"></i>
-        <h2 class="text-center tag_header">deneme deneme deneme</h2>
-        <img src="img/header1.jpg" alt="" srcset="">
-        <p class="line-clamp4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nostrum autem sapiente. Corporis facilis
-            deleniti, voluptatum dolorem quam, labore alias, nemo optio assumenda id maiores mollitia laudantium ducimus
-            magni molestias!
-            Modi iusto commodi eum doloremque corporis sapiente praesentium voluptatibus esse molestiae nostrum nulla
-            fugit, adipisci ex a consequuntur itaque! Doloribus, voluptatibus! Numquam illum autem ex quasi non
-            laboriosam? Deleniti, commodi.
-            A cumque sunt repellat! Quia temporibus eos sit veritatis, aspernatur nemo earum placeat provident ipsa?
-            Fugiat nulla recusandae quam ab commodi rem eligendi qui et, officia eveniet vel in labore.
-            Nemo rem fuga natus. Voluptates corrupti iste quis culpa, error, eveniet consectetur, quos cupiditate ab
-            porro voluptatem soluta nobis. Facilis odio quae voluptas obcaecati illum eaque numquam adipisci, nesciunt
-            qui.
-            Vitae veritatis, quod debitis necessitatibus quasi nesciunt dolorum in natus animi maxime reiciendis
-            quisquam quibusdam suscipit inventore rem ullam. Perspiciatis sint ipsam tempora eos voluptatibus blanditiis
-            laborum iusto necessitatibus animi!
-            Mollitia dolores odio recusandae. Optio tempore, numquam perferendis laudantium explicabo facilis incidunt
-            voluptas, repellendus cumque alias dolorem exercitationem ab repudiandae, beatae dignissimos commodi ut
-            fuga. Voluptates id modi assumenda ullam.
-            Nesciunt, voluptate? Aliquid at unde laborum dolores laboriosam ex doloribus inventore hic, nemo amet labore
-            ut in nesciunt quidem aliquam cum aut possimus nisi soluta dolor illum eligendi. Quae, quis.
-            Saepe reprehenderit labore commodi sint, quos ex tenetur inventore, illum alias odio illo pariatur neque
-            quaerat? Quia commodi beatae nobis? Magnam sapiente explicabo possimus doloremque? Dolor deserunt voluptatem
-            mollitia ut.
-            Cupiditate praesentium, aut illo rerum error dicta ex tenetur doloribus itaque animi? Corporis fugit animi
-            numquam maiores veritatis, eos nostrum veniam error sequi, consequuntur ullam, repellendus dolor culpa et
-            cupiditate.
-            Natus quibusdam facilis neque sed reiciendis eum impedit numquam accusantium fugiat ullam nemo mollitia
-            doloribus repudiandae, enim quidem tempora aliquid pariatur est quas vero, laudantium repellat, aliquam
-            ratione! Quod, distinctio.
-            Suscipit, beatae ipsa? At ullam cumque dolore! Ipsum pariatur, reprehenderit dolor, necessitatibus veniam
-            laudantium similique maxime nam amet possimus maiores suscipit deleniti! Mollitia ipsa possimus corporis
-            omnis quasi, nobis vel?
-            Tempore esse asperiores, numquam consequatur corporis optio doloremque repellat, harum voluptatibus ad enim
-            labore maxime laborum dolores molestias quisquam dolorem error, minus quia? Praesentium atque, assumenda
-            distinctio sit consequatur veniam!
-            Aut consequatur exercitationem eius porro commodi aliquam magni nam, eaque, nobis cupiditate natus
-            aspernatur expedita unde. Quisquam ipsa consequuntur rem saepe quibusdam eveniet, neque similique. Autem
-            omnis totam rerum magni?
-            Facere mollitia eum, cum, recusandae et dignissimos iure sequi odit minus, porro eos ab reiciendis! Suscipit
-            quasi saepe beatae reiciendis ratione ab, similique aliquam natus dolore ut corrupti delectus molestias!
-        </p>
+
     </main>
     <!-- MAIN Start Codes -->
 
