--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                     <i class="fa-regular fa-id-card" data-bs-toggle="offcanvas" data-bs-target="#register"
                         aria-controls="register"></i>
                 </li>
+                <li>
+                    <i class="fa-solid fa-moon" id="dark_mode_id"></i>
+                </li>
             </ul>
         </div>
     </nav>
@@ -164,7 +167,7 @@
                     </li>
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
-                    <input class="form-control me-sm-2" type="text" placeholder="Arama için ...">
+                    <input class="form-control me-sm-2" id="search_id" type="text" placeholder="Arama için ...">
                     <button class="btn btn-outline-warning my-2 my-sm-0 ms-2" type="submit">Arama</button>
                 </form>
             </div>
