--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@
         </div>
     </nav>
 
-
-
     <!-- LOGIN -->
     <div class="offcanvas offcanvas-start bg-dark text-white" data-bs-scroll="true" tabindex="-1" id="login"
         aria-labelledby="Enable both scrolling & backdrop">
@@ -176,7 +174,19 @@
     <!-- NAVBAR End Codes -->
 
     <!-- HEADER Start Codes -->
-    <header id="header"></header>
+    <header id="header">
+        <div class="text-light">
+            <div class="container">
+                <div class="text-center p-5 bg-dark" style="opacity:.8">
+                    <h1 class="text-uppercase display-3 shadow">Full Stack Developer Kursumuza Hoşgeldiniz</h1>
+                    <h4>Backend, Frontend,Database</h4>
+                    <a href="" class="btn btn-outline-danger">Youtube</a>
+                    <a href="" class="btn btn-outline-primary">Linkedin</a>
+                    <a href="" class="btn btn-outline-success">Whatsapp</a>
+                </div>
+            </div>
+        </div>
+    </header>
     <!-- HEADER Start Codes -->
 
     <!-- MAIN Start Codes -->
