--- a/index.html
+++ b/index.html
@@ -191,12 +191,51 @@
 
     <!-- MAIN Start Codes -->
     <main id="main">
-
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum fugit aliquam esse accusamus, assumenda, inventore dolor, repellat quidem vero a quisquam exercitationem culpa. Nihil dicta aspernatur aperiam vitae eum deleniti?
+Ea cupiditate aspernatur id. Dolore eum maiores cupiditate minus! Provident dignissimos voluptate ad modi molestiae officia delectus nam eum alias odit animi, fuga dolore? Tempora dolor veritatis voluptatibus id ducimus.
+Dolorem, laboriosam enim? Aperiam ea quod laudantium nihil voluptatem recusandae animi nemo repudiandae quam sapiente quia aliquid sequi consequuntur eveniet aliquam, voluptas dolorem nulla voluptatibus numquam quae incidunt! Dolor, nisi!
+Enim doloribus corporis harum, at perferendis similique quod quae excepturi obcaecati nesciunt odit minima libero fuga, culpa, ad rem saepe consectetur eligendi laboriosam minus magni commodi voluptates quos? Reprehenderit, harum.
+Vero numquam praesentium, doloribus consequatur inventore quam tenetur necessitatibus rem nemo commodi eligendi dolores officia soluta ut mollitia asperiores impedit, corporis ratione sapiente officiis saepe libero! Minus ut labore omnis?
+Beatae accusantium iste magni totam nesciunt, excepturi reiciendis quidem nisi. Quasi autem nobis vel praesentium doloribus? Id amet molestiae in ea nulla, quia odio vero? Debitis neque quibusdam at perspiciatis?
+Autem quis totam quaerat, obcaecati a iste sint praesentium vero in. Dolorem odit ex voluptatem. Cum ullam quaerat repellendus. Eius similique culpa, ex numquam eligendi laborum aliquid aliquam minus reprehenderit.
+Laboriosam ullam omnis dolorem pariatur veritatis nobis amet, unde ipsa! Praesentium, quos odit? Dicta cum blanditiis alias impedit veniam totam qui libero, natus sapiente. Dignissimos nostrum sapiente rerum voluptas itaque.
+Libero a porro nesciunt eum ipsum reprehenderit, omnis vel, eveniet ipsam voluptatum saepe, ea sint cum labore officiis totam qui quis? Enim quo rerum quaerat doloribus accusamus doloremque incidunt eveniet.
+Dolor mollitia earum laborum eos laudantium, est consequuntur dolore expedita corporis eaque voluptate facere cupiditate sapiente corrupti quasi tenetur magnam soluta minima at pariatur fuga commodi? Quasi excepturi consequuntur aliquid.
+Perferendis esse cupiditate architecto consequuntur et praesentium id voluptatem itaque dolorum ratione qui, quasi rerum quidem deserunt quae dolor consequatur, minus distinctio incidunt eligendi repellat alias earum? Dolore, fuga laborum?
+Quia officiis laborum magnam itaque. Veniam, fugiat ut alias vitae expedita molestias. Ad odit, ipsa laborum eaque, recusandae et nulla quia dicta ex quisquam magnam quos neque velit totam placeat?
+Earum, aliquid illum. Odit, recusandae consequuntur. Quas provident eligendi aliquid dolorum, deserunt tenetur necessitatibus, quibusdam iure deleniti odio repellendus et excepturi asperiores illo doloremque voluptatibus ut cupiditate aperiam! Repudiandae, praesentium.
+Atque, eaque error fugiat rerum architecto quisquam at culpa provident aperiam quibusdam veritatis temporibus dicta iusto sint laboriosam recusandae deleniti. Doloremque modi aliquam nulla expedita necessitatibus, asperiores voluptate saepe quasi?
+Assumenda at odio, nesciunt temporibus earum placeat nobis voluptates recusandae id possimus! Molestias voluptatum aut sint reprehenderit, ipsam totam omnis dolore voluptatibus! Ipsum expedita sequi consectetur quae sunt, numquam cumque!
+Deserunt corrupti maxime tenetur ab magnam autem, ipsam nobis ducimus iure exercitationem saepe id. Est officiis laudantium, fugiat aperiam provident unde, fuga, temporibus sit reiciendis quasi quia ea assumenda maxime!
+Et libero, incidunt inventore iure ab, quae sapiente delectus mollitia, molestiae dolore in maiores excepturi. Eius molestiae doloremque suscipit maxime quisquam, libero reprehenderit culpa doloribus facilis non quidem aliquam voluptate!
+Nesciunt hic voluptas est, reiciendis nam, vel sed rerum dicta quae corporis omnis illum quibusdam quidem itaque! Culpa blanditiis doloremque ipsa. Dolor nisi, iure aperiam delectus voluptas porro eum voluptatem.
+Tempora odio id earum, deserunt quas quisquam molestiae asperiores doloribus aliquam laboriosam praesentium dolorum, illum ratione placeat nulla? Accusamus consectetur nemo unde assumenda, totam fuga consequuntur cumque adipisci debitis eum.
+Vero delectus voluptatibus corporis earum nihil quas quos consequatur repellat dicta soluta praesentium accusantium, eos vel, veniam dolor quibusdam ipsum itaque culpa. Neque aliquam itaque voluptatem ullam quas repellendus perferendis.
+Fuga id quo pariatur ea voluptates suscipit nemo voluptatibus fugit quam, provident eos tenetur nam quia itaque placeat consequatur dolorum aperiam possimus sit nesciunt minima corrupti perferendis eaque? Laboriosam, fugiat.
+Enim incidunt recusandae ullam illo voluptatem consectetur assumenda ea quasi officiis. Quibusdam consequatur atque voluptatem facilis at aspernatur porro nulla quisquam molestiae, illo voluptatibus unde hic eligendi, officiis maxime eius?
+Eligendi nemo consequatur modi delectus. Omnis quis quod molestias, pariatur numquam mollitia nobis laboriosam magnam sint ut itaque similique minus dolorum quasi fugiat earum quas non. Magni vitae recusandae provident!
+Cumque similique, magni nam ea soluta quod optio id distinctio molestiae repudiandae aliquid inventore ex mollitia nesciunt officiis voluptas, eaque perferendis alias autem! A, enim. Saepe dolor eveniet distinctio libero?
+Alias perferendis nihil, voluptatum sit tenetur facilis quidem deleniti molestias quisquam consectetur ratione laboriosam eius mollitia? Provident voluptates distinctio excepturi blanditiis cupiditate atque iusto beatae, placeat quod possimus tenetur? Quibusdam.
+Eum quasi temporibus quaerat ipsum inventore expedita rerum consectetur at? Corrupti saepe eligendi dolores eaque, aspernatur quos officiis ipsa ipsum, possimus adipisci perferendis alias tenetur vero laboriosam quibusdam! Repellat, unde.
+Similique neque ipsum obcaecati corrupti sit fugit tenetur sunt accusamus recusandae voluptatibus impedit, itaque vero assumenda nobis tempore voluptatum libero. Modi officiis dicta tempora corrupti impedit aspernatur! Totam, error eligendi?
+Autem expedita consequuntur blanditiis aliquid debitis iste dolorum. Eligendi aspernatur autem aliquam laboriosam quod debitis atque perferendis ratione ab quidem minus sint labore sed laudantium velit earum corrupti, eum quibusdam.
+Odit qui amet, alias tenetur animi exercitationem, illum iste fugit dolore nisi necessitatibus? Nulla quas in magni dolorem vero praesentium nam mollitia nostrum corrupti quod, cumque perspiciatis. Repellat, necessitatibus explicabo?
+Fuga sapiente maiores iste magnam libero? Ipsa, velit natus! Cum quam velit asperiores. Explicabo quia perspiciatis quaerat distinctio perferendis sequi, quo, assumenda dignissimos eum, vitae officia? Inventore vel adipisci repellendus.
+Illo eligendi fugit, quia vel consectetur dolorum eveniet minima nihil atque iusto numquam reprehenderit aliquam laudantium neque voluptas repellendus est? Obcaecati ipsam perspiciatis quia rem nostrum hic sunt qui architecto!
+Necessitatibus ex laboriosam ducimus reprehenderit fuga magnam cumque enim consequuntur error dolor alias voluptatem deleniti, distinctio quo magni? Sit laboriosam rerum quod, repellat tempore ut officia consectetur unde maiores culpa.
+Perspiciatis incidunt rerum aut ex, harum, accusantium dicta deleniti inventore ipsa necessitatibus nulla expedita exercitationem doloribus nam commodi repellendus. Enim reprehenderit vitae cupiditate eaque pariatur dolore excepturi a fugiat consequuntur?
+Eveniet ipsa necessitatibus, quas explicabo rerum deleniti minima numquam delectus! Esse ratione illum officia est nulla expedita ab asperiores hic, saepe, recusandae iure quae? Minima quaerat soluta dolores ea architecto?
+Laudantium obcaecati sit numquam. Aperiam rem praesentium sit error voluptatum, molestias fugit fuga incidunt modi id exercitationem quidem harum nesciunt odio ab repellat fugiat. Placeat obcaecati neque doloribus perferendis quam!
+Sint accusantium tenetur fuga a asperiores magni magnam assumenda commodi, dolorum, aliquam esse ullam nostrum tempore sapiente rerum inventore! Vero nulla aliquid laborum fugiat beatae exercitationem quas tempora, necessitatibus quidem?
+Adipisci nemo odit non laborum doloremque iure consectetur maiores quod quisquam quam quidem fuga mollitia unde labore necessitatibus, tenetur, quo illo accusantium a architecto numquam veritatis est provident. Dolorum, accusamus.
+Repellat pariatur consequuntur quaerat atque adipisci corrupti tenetur. Nam dicta, tempore autem odit quam repellendus quos dolore aliquid voluptates veniam aperiam voluptatum mollitia deserunt! Dolor, sed. Dolore animi voluptatibus sit.
+Libero natus, odit consequatur voluptatem, voluptates qui ratione ullam magnam doloremque velit vitae deleniti aut exercitationem culpa enim quidem alias molestiae neque quae praesentium? Modi tempora similique facere vero consequatur?
+Doloribus fugiat quaerat blanditiis, corporis expedita neque porro necessitatibus voluptas fugit dolor magni deleniti hic optio omnis eveniet cum eum obcaecati aliquam rem quam, quis saepe! Velit numquam deserunt voluptatum?
     </main>
     <!-- MAIN Start Codes -->
 
     <!-- FOOTER Start Codes -->
-    <footer id="footer"></footer>
+    <footer id="footer" class="fixed-bottom"></footer>
     <!-- FOOTER Start Codes -->
 
     <!-- end codes -->
