--- a/index.html
+++ b/index.html
@@ -146,22 +146,33 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page">Anasayfa <span
+                        <a class="nav-link active" href="index.html" aria-current="page">Anasayfa <span
                                 class="visually-hidden">(current)</span></a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hakkımızda</a>
+                        <a class="nav-link" href="#product">Ürünler</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="#">iletişim</a>
+                        <a class="nav-link" href="#about_me">Hakkımızda</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#blog">Blog</a>
+                    </li>
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="#lesson" id="dropdownId" data-bs-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Dersler</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
                             <a class="dropdown-item" href="#">Frontend</a>
                             <a class="dropdown-item" href="#">Backend</a>
                         </div>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">iletişim</a>
                     </li>
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
