--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                             <a class="dropdown-item" href="#">Backend</a>
                         </div>
                     </li>
-                    
+
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">iletişim</a>
+                        <a class="nav-link" href="#footer">iletişim</a>
                     </li>
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
@@ -246,7 +246,42 @@ Doloribus fugiat quaerat blanditiis, corporis expedita neque porro necessitatibu
     <!-- MAIN Start Codes -->
 
     <!-- FOOTER Start Codes -->
-    <footer id="footer" class="fixed-bottom"></footer>
+    <footer id="footer" class="fixed-bottom44">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-9 bg-dark">
+                    <iframe width="100%" height="440" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=723&amp;height=440&amp;hl=en&amp;q=malatya%20Ankara+(Haritam)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+
+                </div>
+                <div class="col-md-3 bg-primary text-white">
+                    <h4 class="text-center display-5">Write Me</h4>
+                    <form action="#!" method="post">
+                        <div class="mb-3">
+                            <label for="name_surname" class="form-label">Name And Surname</label>
+                            <input type="email" class="form-control" id="name_surname"
+                                placeholder="name and surname">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="name@example.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password_id" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password_id" name="password_id"
+                                placeholder="şifrenizi giriniz">
+                        </div>
+        
+                        <div class="mb-3">
+                            <input type="reset" class="btn btn-danger" value="Temizle" />
+                            <button type="submit" class="btn btn-primary">Gönder</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-12 text-center bg-dark text-white" id="copy_right">2021- <span id="now_date">2023</span> Design By: <a href="http://www.hamitmizrak.com.tr"> Hamit Mızrak</a>   &copy; Bütün Haklar Saklıdır.</div>
+            </div>
+        </div>
+    </footer>
     <!-- FOOTER Start Codes -->
 
     <!-- end codes -->
