--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     <!-- start codes -->
 
     <!-- NAVBAR FIRST Start Codes -->
-
     <nav id="navbar_first" class="navbar">
         <div class="container">
             <!-- LEFT -->
@@ -321,7 +320,7 @@
     <footer id="footer" class="fixed-bottom44">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-9 bg-dark">
+                <div class="col-md-9">
                     <iframe width="100%" height="440" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                         id="gmap_canvas"
                         src="https://maps.google.com/maps?width=723&amp;height=440&amp;hl=en&amp;q=malatya%20Ankara+(Haritam)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
@@ -358,6 +357,10 @@
         </div>
     </footer>
     <!-- FOOTER Start Codes -->
+
+     <!-- Back to Top Start Codes -->
+     <a href="#navbar_first"  id="back_to_top"><i class="fa-solid fa-arrow-up"></i></a>
+    <!-- Back to Top Start Codes -->
 
     <!-- end codes -->
     <!-- Bootstrap JavaScript Libraries -->
