--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     </form>
                 </div>
                 <div class="col-md-12 text-center bg-dark text-white" id="copy_right">2021- <span
-                        id="now_date">2023</span> Design By: <a href="http://www.hamitmizrak.com.tr"> Hamit Mızrak</a>
+                        id="now_date"></span> Design By: <a href="http://www.hamitmizrak.com.tr"> Hamit Mızrak</a>
                     &copy; Bütün Haklar Saklıdır.</div>
             </div>
         </div>
