--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@
                     qui incidunt sapiente delectus voluptate.</p>
             </div>
         </section>
-        <!-- end Codes Prodcuct -->
-        <!-- Start Codes Prodcuct -->
+        <!-- end Codes Product -->
+
+        <!-- Start Codes newspaper -->
         <section id="newspaper">
             <div class="container">
                 <h3 class="tag_header">ChatCPT message</h3>
@@ -307,7 +308,7 @@
                 </p>
             </div>
         </section>
-
+        <!-- end Codes newspaper -->
 
         <!-- Start Codes Prodcuct -->
         <section id="blog">
